--- a/Demo/Demo/Storyboards/Base.lproj/Main.storyboard
+++ b/Demo/Demo/Storyboards/Base.lproj/Main.storyboard
@@ -728,7 +728,7 @@
                                                     <tableColumns>
                                                         <tableColumn identifier="NameColumn" editable="NO" width="200" minWidth="10" maxWidth="3.4028234663852886e+38" id="QzG-j2-7mu">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
-                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <font key="font" metaFont="label" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -741,7 +741,7 @@
                                                         </tableColumn>
                                                         <tableColumn identifier="SizeColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="wos-DT-xlO">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
-                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <font key="font" metaFont="label" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -754,7 +754,7 @@
                                                         </tableColumn>
                                                         <tableColumn identifier="FormatColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="HhZ-n9-r3j">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Format">
-                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <font key="font" metaFont="label" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -794,11 +794,19 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="207" height="270"/>
                                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Z6L-DW-Zk8"/>
                                             </imageView>
+                                            <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="AsP-u5-DnX">
+                                                <rect key="frame" x="0.0" y="0.0" width="207" height="270"/>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Yon-nd-WfH"/>
+                                            </imageView>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstItem="AsP-u5-DnX" firstAttribute="top" secondItem="4OB-ni-YZH" secondAttribute="top" id="BWD-6p-0eF"/>
                                             <constraint firstAttribute="trailing" secondItem="4OB-ni-YZH" secondAttribute="trailing" id="MBo-L5-pPq"/>
                                             <constraint firstItem="4OB-ni-YZH" firstAttribute="leading" secondItem="8gx-L9-759" secondAttribute="leading" id="PbL-eu-UlK"/>
                                             <constraint firstItem="4OB-ni-YZH" firstAttribute="top" secondItem="8gx-L9-759" secondAttribute="top" id="RQh-Mn-Asy"/>
+                                            <constraint firstItem="AsP-u5-DnX" firstAttribute="leading" secondItem="4OB-ni-YZH" secondAttribute="leading" id="icB-dg-eg3"/>
+                                            <constraint firstItem="AsP-u5-DnX" firstAttribute="trailing" secondItem="4OB-ni-YZH" secondAttribute="trailing" id="rDh-10-ALf"/>
+                                            <constraint firstItem="AsP-u5-DnX" firstAttribute="bottom" secondItem="4OB-ni-YZH" secondAttribute="bottom" id="udX-ve-Cbx"/>
                                             <constraint firstAttribute="bottom" secondItem="4OB-ni-YZH" secondAttribute="bottom" id="wer-ZG-6QQ"/>
                                         </constraints>
                                     </customView>
@@ -817,8 +825,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="4OB-ni-YZH" id="TDb-2l-5o6"/>
+                        <outlet property="imagesView" destination="AsP-u5-DnX" id="LIh-Pk-dIY"/>
                         <outlet property="tableView" destination="Ybr-hq-4sc" id="gR9-Wl-qDh"/>
+                        <outlet property="textureView" destination="4OB-ni-YZH" id="TDb-2l-5o6"/>
                     </connections>
                 </viewController>
                 <customObject id="A0r-jG-6Vg" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
