--- a/Demo/Demo/Storyboards/Base.lproj/Main.storyboard
+++ b/Demo/Demo/Storyboards/Base.lproj/Main.storyboard
@@ -728,7 +728,7 @@
                                                     <tableColumns>
                                                         <tableColumn identifier="NameColumn" editable="NO" width="200" minWidth="10" maxWidth="3.4028234663852886e+38" id="QzG-j2-7mu">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
-                                                                <font key="font" metaFont="menu" size="11"/>
+                                                                <font key="font" metaFont="controlContent" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -741,7 +741,7 @@
                                                         </tableColumn>
                                                         <tableColumn identifier="SizeColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="wos-DT-xlO">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
-                                                                <font key="font" metaFont="menu" size="11"/>
+                                                                <font key="font" metaFont="controlContent" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -754,7 +754,7 @@
                                                         </tableColumn>
                                                         <tableColumn identifier="FormatColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="HhZ-n9-r3j">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Format">
-                                                                <font key="font" metaFont="menu" size="11"/>
+                                                                <font key="font" metaFont="controlContent" size="11"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </tableHeaderCell>
@@ -888,9 +888,9 @@
             <objects>
                 <tabViewController selectedTabViewItemIndex="0" tabStyle="unspecified" canPropagateSelectedChildViewControllerTitle="NO" id="NhS-Cg-edo" userLabel="CGFX Controller" customClass="CGFXController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <tabViewItems>
-                        <tabViewItem id="eiB-pT-W7j"/>
-                        <tabViewItem id="5Yz-kE-EfE"/>
-                        <tabViewItem id="T2e-kU-LYM"/>
+                        <tabViewItem id="eiB-pT-W7j" userLabel="Textures Item"/>
+                        <tabViewItem id="5Yz-kE-EfE" userLabel="Materials Item"/>
+                        <tabViewItem id="T2e-kU-LYM" userLabel="Models Item"/>
                     </tabViewItems>
                     <tabView key="tabView" type="noTabsNoBorder" id="niY-Qg-HsB">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
@@ -902,6 +902,7 @@
                     </tabView>
                     <connections>
                         <outlet property="tabView" destination="niY-Qg-HsB" id="QRj-kg-D4d"/>
+                        <outlet property="texturesItem" destination="eiB-pT-W7j" id="sG1-B9-KOZ"/>
                         <segue destination="gzX-Mh-Zfg" kind="relationship" relationship="tabItems" id="OCO-Vl-8ZS"/>
                         <segue destination="fMZ-B9-Aa7" kind="relationship" relationship="tabItems" id="TTJ-rF-nQ9"/>
                         <segue destination="Qnq-7s-Dqz" kind="relationship" relationship="tabItems" id="y3n-1G-2Tl"/>
@@ -914,25 +915,122 @@
         <!--CGFX Textures Controller-->
         <scene sceneID="dag-wY-gg2">
             <objects>
-                <viewController id="gzX-Mh-Zfg" userLabel="CGFX Textures Controller" sceneMemberID="viewController">
+                <viewController id="gzX-Mh-Zfg" userLabel="CGFX Textures Controller" customClass="CGFXTexturesController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="3fj-ND-9Pt">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tzb-ai-V3l">
-                                <rect key="frame" x="212" y="127" width="56" height="16"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Textures" id="qlU-kf-7tl">
-                                    <font key="font" usesAppearanceFont="YES"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
+                            <splitView arrangesAllSubviews="NO" dividerStyle="thin" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3wa-eh-EVg">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                                <subviews>
+                                    <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="HOw-Vo-by5">
+                                        <rect key="frame" x="0.0" y="0.0" width="272" height="270"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <clipView key="contentView" id="OD6-R8-xzM">
+                                            <rect key="frame" x="0.0" y="0.0" width="272" height="270"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" headerView="VFO-cp-8LC" id="6gc-Xv-Wme">
+                                                    <rect key="frame" x="0.0" y="0.0" width="409" height="245"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <size key="intercellSpacing" width="3" height="2"/>
+                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                                    <tableColumns>
+                                                        <tableColumn identifier="NameColumn" editable="NO" width="200" minWidth="10" maxWidth="3.4028234663852886e+38" id="Jf5-99-pw6">
+                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
+                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </tableHeaderCell>
+                                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Name" id="bWS-LD-CRA">
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                        </tableColumn>
+                                                        <tableColumn identifier="SizeColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="0Vm-eD-zTU">
+                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
+                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </tableHeaderCell>
+                                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="Esy-Cf-VIF">
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                        </tableColumn>
+                                                        <tableColumn identifier="FormatColumn" editable="NO" width="100" minWidth="10" maxWidth="3.4028234663852886e+38" id="3iW-VF-FgA">
+                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Format">
+                                                                <font key="font" metaFont="controlContent" size="11"/>
+                                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </tableHeaderCell>
+                                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Format" id="O9e-9K-Kjt">
+                                                                <font key="font" metaFont="system"/>
+                                                                <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                        </tableColumn>
+                                                    </tableColumns>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="gzX-Mh-Zfg" id="nEx-zl-oMV"/>
+                                                        <outlet property="delegate" destination="gzX-Mh-Zfg" id="naK-Rc-a3P"/>
+                                                    </connections>
+                                                </tableView>
+                                            </subviews>
+                                        </clipView>
+                                        <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="m5v-Bt-Ztb">
+                                            <rect key="frame" x="0.0" y="254" width="272" height="16"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Lna-R3-YUd">
+                                            <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                        <tableHeaderView key="headerView" id="VFO-cp-8LC">
+                                            <rect key="frame" x="0.0" y="0.0" width="409" height="25"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableHeaderView>
+                                    </scrollView>
+                                    <customView id="Bqv-kw-BMj">
+                                        <rect key="frame" x="273" y="0.0" width="207" height="270"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <subviews>
+                                            <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="93P-LI-fFI" userLabel="Texture View">
+                                                <rect key="frame" x="0.0" y="0.0" width="207" height="270"/>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="puN-6Z-eEw"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="93P-LI-fFI" firstAttribute="leading" secondItem="Bqv-kw-BMj" secondAttribute="leading" id="LYy-H7-psT"/>
+                                            <constraint firstItem="93P-LI-fFI" firstAttribute="top" secondItem="Bqv-kw-BMj" secondAttribute="top" id="P9o-iU-0zt"/>
+                                            <constraint firstAttribute="trailing" secondItem="93P-LI-fFI" secondAttribute="trailing" id="Pmc-lT-UiB"/>
+                                            <constraint firstAttribute="bottom" secondItem="93P-LI-fFI" secondAttribute="bottom" id="sUR-eQ-fAC"/>
+                                        </constraints>
+                                    </customView>
+                                </subviews>
+                                <holdingPriorities>
+                                    <real value="260"/>
+                                    <real value="250"/>
+                                </holdingPriorities>
+                            </splitView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="tzb-ai-V3l" firstAttribute="centerY" secondItem="3fj-ND-9Pt" secondAttribute="centerY" id="9c1-3S-jPf"/>
-                            <constraint firstItem="tzb-ai-V3l" firstAttribute="centerX" secondItem="3fj-ND-9Pt" secondAttribute="centerX" id="UxO-9p-03H"/>
+                            <constraint firstItem="3wa-eh-EVg" firstAttribute="leading" secondItem="3fj-ND-9Pt" secondAttribute="leading" id="G1Y-ux-fJe"/>
+                            <constraint firstItem="3wa-eh-EVg" firstAttribute="top" secondItem="3fj-ND-9Pt" secondAttribute="top" id="Kz8-gK-fEb"/>
+                            <constraint firstAttribute="trailing" secondItem="3wa-eh-EVg" secondAttribute="trailing" id="O1W-kX-eaI"/>
+                            <constraint firstAttribute="bottom" secondItem="3wa-eh-EVg" secondAttribute="bottom" id="tTn-XX-U41"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="6gc-Xv-Wme" id="qEx-BW-oar"/>
+                        <outlet property="textureView" destination="93P-LI-fFI" id="8M1-pl-DQh"/>
+                    </connections>
                 </viewController>
                 <customObject id="7OP-Fc-qON" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
